# cits3003_project_start_2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: imgui.ini
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
lib/tinyfiledialogs/: CMakeLists.txt
res/shaders/animated_entity/: frag.glsl  vert.glsl
res/shaders/common/: lights.glsl  maths.glsl
res/shaders/emissive_entity/: frag.glsl  vert.glsl
res/shaders/entity/: vert.glsl
src/: main.cpp
src/rendering/cameras/: CameraInterface.h  FlyingCamera.cpp  FlyingCamera.h  PanningCamera.cpp  PanningCamera.h
src/rendering/imgui/: ImGuiImpl.cpp  ImGuiImpl.h  ImGuiManager.cpp  ImGuiManager.h
src/rendering/memory/: UniformBufferArray.h
src/rendering/renders/: AnimatedEntityRenderer.cpp  AnimatedEntityRenderer.h  Animator.cpp  EmissiveEntityRenderer.cpp  EmissiveEntityRenderer.h  EntityRenderer.cpp  EntityRenderer.h  MasterRenderer.cpp  MasterRenderer.h  ShaderInterface.h
src/rendering/renders/shaders/: BaseEntityShader.cpp  BaseEntityShader.h  BaseLitEntityShader.cpp  BaseLitEntityShader.h  ShaderInterface.cpp  ShaderInterface.h
src/rendering/resources/: MeshHierarchy.cpp  MeshHierarchy.h  ModelHandle.h  ModelLoader.cpp  ModelLoader.h  TextureHandle.cpp  TextureHandle.h  TextureLoader.cpp  TextureLoader.h
src/rendering/scene/: Animator.h  GlobalData.h  Lights.cpp  Lights.h  MasterRenderScene.cpp  MasterRenderScene.h  RenderScene.h  RenderedEntity.h
src/scene/: BasicStaticScene.cpp  BasicStaticScene.h  EditorScene.cpp  EditorScene.h  SceneContext.h  SceneInterface.h  SceneManager.cpp  SceneManager.h
src/scene/editor_scene/: AnimatedEntityElement.cpp  AnimatedEntityElement.h  EmissiveEntityElement.cpp  EmissiveEntityElement.h  EntityElement.cpp  EntityElement.h  GroupElement.cpp  GroupElement.h  PointLightElement.cpp  PointLightElement.h  SceneElement.cpp  SceneElement.h
src/system_interfaces/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/utility/: HelperTypes.h  JsonHelper.h  Math.h  OpenGL.cpp  OpenGL.h  PerformanceCounter.cpp  PerformanceCounter.h  SyncManager.cpp  SyncManager.h
videos/: taskB.webm  taskE_after.webm  taskE_before.webm  taskG.webm
